--- a/index.html
+++ b/index.html
@@ -29,65 +29,68 @@
       </header>
     </div>
     <div id="content">
-      <!-- hero section starts here -->
-      <section id="hero" class="hero-class">
-        <div class="hero-content">
-          <div class="logo-mascot">
-            <img
-              src="./media/logo-mascot.svg"
-              alt="The Muse Ratio Mascot Logo"
-            />
-          </div>
+      <div class="gradiant-bg">
+        <!-- hero section starts here -->
+        <section id="hero" class="hero-class">
+          <div class="hero-content">
+            <div class="logo-mascot">
+              <img
+                src="./media/logo-mascot.svg"
+                alt="The Muse Ratio Mascot Logo"
+              />
+            </div>
 
-          <div class="heading-hero">
-            <h1>We are the perfect</h1>
-            <h1>
-              ratio of
-              <span class="hero-head-highlight-1 animate-text-bg-1"
-                >design &
+            <div class="heading-hero">
+              <h1>We are the perfect</h1>
+              <h1>
+                ratio of
+                <span class="hero-head-highlight-1 animate-text-bg-1"
+                  >design
+                </span>
+                &
+              </h1>
+              <h1>
+                <span class="hero-head-highlight-2 animate-text-bg-1"
+                  >development for</span
+                >
+              </h1>
+              <h1>your needs.</h1>
+            </div>
+
+            <div class="cta">
+              <a href="#"><button>come say hi</button></a>
+
+              <span>
+                <a href="#" class="explore-more-button animate-bg-button">
+                  Explore more
+                  <span class="explore-more-hover"> &#8250;</span>
+                </a>
               </span>
-            </h1>
-            <h1>
-              <span class="hero-head-highlight-2 animate-text-bg-1"
-                >development for</span
+            </div>
+          </div>
+        </section>
+        <!-- hero section ends here and about section starts -->
+        <section id="about">
+          <div class="about-big-cont">
+            <h2>
+              we are a Branding, Design &<br />
+              Development Studio from<br /><span
+                class="about-highlight-text animate-text-bg-1"
+                >Ludhiana</span
               >
-            </h1>
-            <h1>your needs.</h1>
+            </h2>
           </div>
-
-          <div class="cta">
-            <a href="#"><button>come say hi</button></a>
-
-            <span>
-              <a href="#" class="explore-more-button animate-bg-button">
-                Explore more
-                <span class="explore-more-hover"> &#8250;</span>
-              </a>
-            </span>
+          <div class="about-small-cont">
+            <p>
+              Our Focus is one of no fugazi & all action. We pride in keeping
+              promises & upholding both the quality & the process of our work to
+              be highly professional but with its unique personality & stand
+              alone resilliance. we simply deliver tailor made services &
+              packages for you.
+            </p>
           </div>
-        </div>
-      </section>
-      <!-- hero section ends here and about section starts -->
-      <section id="about">
-        <div class="about-big-cont">
-          <h2>
-            we are a Branding, Design &<br />
-            Development Studio from<br /><span
-              class="about-highlight-text animate-text-bg-1"
-              >Ludhiana</span
-            >
-          </h2>
-        </div>
-        <div class="about-small-cont">
-          <p>
-            Our Focus is one of no fugazi & all action. We pride in keeping
-            promises & upholding both the quality & the process of our work to
-            be highly professional but with its unique personality & stand alone
-            resilliance. we simply deliver tailor made services & packages for
-            you.
-          </p>
-        </div>
-      </section>
+        </section>
+      </div>
       <section id="our-services"></section>
       <section id="our-work"></section>
     </div>
