project area initiated

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;800;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -91,12 +96,36 @@
           </div>
         </section>
       </div>
-      <section id="our-services"></section>
-      <section id="our-work"></section>
+      <section id="our-services">
+        <div class="services-list">
+          <h3>
+            <span class="branding-drop-down animate-text-bg-1">Branding</span>
+          </h3>
+          <!-- <h3>
+            <span class="Web-design-drop-down animate-text-bg-1"
+              >Web Designing</span
+            >
+          </h3> -->
+        </div>
+      </section>
+      <section id="our-work">
+        <div class="projects">
+          <div class="projects-title">
+            <p>Our Projects</p>
+          </div>
+          <div class="p-images">
+            <div class="p-img">
+              <!-- <img src="./media/Cups.png" /> -->
+            </div>
+            <div class="p-img"></div>
+            <div class="p-img"></div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <div>
-      <footer>this is footer</footer>
+      <footer></footer>
     </div>
 
     <script src="function.js"></script>
